// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component functionality should render correctly 1`] = `
<styled.button
  className="button"
>
   
  <FontAwesomeIcon
    border={false}
    className=""
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          320,
          512,
          Array [],
          "f054",
          "M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z",
        ],
        "iconName": "chevron-right",
        "prefix": "fas",
      }
    }
    inverse={false}
    listItem={false}
    mask={null}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
</styled.button>
`;

exports[`Heart component functionality should render correctly 1`] = `
<styled.div>
  <FontAwesomeIcon
    border={false}
    className=""
    fixedWidth={false}
    flip={null}
    icon={
      Object {
        "icon": Array [
          512,
          512,
          Array [],
          "f004",
          "M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z",
        ],
        "iconName": "heart",
        "prefix": "far",
      }
    }
    id="emptyHeart"
    inverse={false}
    listItem={false}
    mask={null}
    onClick={[Function]}
    pull={null}
    pulse={false}
    rotation={null}
    size="2x"
    spin={false}
    symbol={false}
    title=""
    transform={null}
  />
</styled.div>
`;

exports[`Stars component functionality should render correctly 1`] = `
<styled.div
  className="star"
/>
`;

exports[`Test Carousel component functionality should render correctly 1`] = `
<styled.div
  className="carousel"
>
  <styled.div
    className="buttonDiv"
  >
    <styled.div />
  </styled.div>
  <div
    className="houseDisplay"
  />
  <styled.div
    className="buttonDiv"
  >
    <Button
      buttonClickHandler={[Function]}
      value="left"
    />
  </styled.div>
</styled.div>
`;

exports[`Test House component functionality should render correctly 1`] = `
<styled.div
  className="house"
>
  <styled.div>
    <Heart />
    <styled.img
      className="image"
      onClick={[Function]}
      src="https://housemania.s3-us-west-1.amazonaws.com/annie-spratt-BmjlyHwV1S0-unsplash.jpg"
    />
  </styled.div>
  <styled.div
    onClick={[Function]}
  >
    <styled.div
      className="layout"
    >
      <h5>
        APARTMENT
        : 
        SARATOGA
         
      </h5>
    </styled.div>
    <div
      className="description"
    >
      <h3>
        quaint house
         
      </h3>
    </div>
    <styled.div
      className="cost"
    >
      <h5>
        $309/night
         
      </h5>
    </styled.div>
    <div
      className="stars"
    >
      <h5>
        <Stars
          rating={4}
        />
         
        20
         
      </h5>
    </div>
  </styled.div>
</styled.div>
`;

exports[`Test Widget component functionality should render correctly 1`] = `
<styled.div
  id="morePlaces"
>
  <h2>
    More places to stay
  </h2>
</styled.div>
`;
